# Light_detector

./: CMakeLists.txt
src/: cover_net.h  euclid_2d.h  euclid_2d.h~  light.cpp  light.h  light.h~  lights_detector.cpp  lights_detector.h~  lights_tracker.cpp  lights_tracker.h  main.cpp  ticker.h  ticker.h~
